CLI -> Libadwaita/GTK4

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,12 @@
 [package]
 name = "AIculator"
-version = "0.0.98"
+version = "0.1.1"
 edition = "2024"
 
 [dependencies]
-ollama-rs = "0.2.6"
-tokio = { version = "1.43.0", features = ["full"] }
+gtk4 = "0.9.6"
+libadwaita = "0.7.2"
+ollama-rs = "0.3.1"
+regex = "1.11.1"
+tokio = { version = "1.45.0", features = ["full"] }
 
